--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <li ><a href="#about">About Us</a></li>
 <li ><a href="#sales">Sales</a></li>
 <li ><a href="#cars">Cars</a></li>
+<li><a href="lab6.html"><i class='bx bxs-shopping-bag'></i></li>
+
 </ul>
 <a href="login.html" class="btn">Log In</a>
 </div>
